tests/paczka1/fuzzy1/36050829.err
Error in line 10: vqGn S182 76,7
Error in line 16: 7nO A313 246,6
Error in line 24: vqGn A400 39,4
Error in line 36: vqGn S182 13,4
